# toy-payments-engine

./: Cargo.toml  README.md
.github/workflows/: tests.yml
src/: client.rs  errors.rs  lib.rs  main.rs  types.rs
test_data/: input_types.csv  output.csv
