[package]
authors = ["kononnable <kononnable@gmail.com>"]
edition = "2018"
name = "toy-payments-engine"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
rust_decimal = "1.11.0"
serde = {version = "1.0.125", features = ["derive"]}
thiserror = "1.0.24"
